--- a/ADVANCED SITE STYLE.CSS
+++ b/ADVANCED SITE STYLE.CSS
@@ -202,9 +202,16 @@ height: 100vh;
   color:#007bff;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 } */
+.websitestructure{
+  background-image: url(./images/SECTION1BACKGROUND.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
 
-
-.slidesec{
+.Popular{
+  height:100vh;
+}
+/* .slidesec{
   display: flex;
   flex-direction: row;
   align-content: center;
@@ -212,10 +219,9 @@ height: 100vh;
   margin-top:10% ;
   width: 800%;
 
-}
-
+}  */
 /*slide stuff*/
-.mySlides {
+ .mySlides {
   display: none;
   width: 100%;
 
@@ -224,21 +230,145 @@ height: 100vh;
   position: absolute;
   top:400px;
   left:10px;
+background-color: rgba(0, 0,0, 0.0);
+
+  /* width: 45px;
+  height:35px; */
+  
 }
+
 .rightclick{
 
   position: absolute;
   top:400px;
   right:10px;
+  background-color: rgba(0, 0, 0,0);
+  /* width: 45px;
+  height:35px; */
+  background-size: cover;
 }
+.leftclick:active{
+  border: 2px rgb(247, 146, 30) solid;
+}
+.rightclick:active{
+  border: 2px rgb(247, 146, 30) solid;
+}
+
 .fade {
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 2.5s;
 }
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
 }
+
+/* ////////////////////////////////////////////////////////////DIVSLIDE////////////////////////////////// */
+.DIVISION1{
+  display: flex;
+  flex-direction: row;
+}
+.ACTIVEVIEW{
+  height: 600px;
+  width: 600px;
+  margin-top: 10%;
+  margin-left: 25%;
+  
+}
+.active1{
+  transform: translate(-50%,-50%);
+  margin-top:50%;
+  margin-left:50%;
+}
+.active2{
+  transform: translate(-50%,-50%);
+  margin-top:50%;
+  margin-left:50%;
+}
+.active3{
+  transform: translate(-50%,-50%);
+  margin-top:50%;
+  margin-left:50%;
+}
+.active4{
+  transform: translate(-50%,-50%);
+  margin-top:50%;
+  margin-left:50%;
+}
+.active5{
+  transform: translate(-50%,-50%);
+  margin-top:50%;
+  margin-left:50%;
+}
+
+.DIFFERENTVIEWS{
+  display: flex;
+  flex-direction: column;
+  margin-top: -35%;
+  margin-left: 15%;
+}
+.BOX{
+  height: 44px;
+  width: 44px;
+  margin-bottom: 1%; 
+}
+/* .VIEW :focus{
+  border: 2px rgb(247, 146, 30) solid;
+} */
+.VIEW {
+  /* align-items: center; */
+  width: 40px;
+  height: 40px;
+  align-items: center;
+}
+/* .V{
+  margin:auto;
+} */
+
+.VIEW input{ 
+  transform: translate(-50%,-50%);
+  margin-top:50%;
+  margin-left:50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* ////////////////////////////////////////////////////form&jas/////////////////////////////////////////// */
@@ -247,11 +377,12 @@ height: 100vh;
   left:250px;
 } */
 .form{
-  margin-top: 20%;
+  margin-top: -3%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-image: url(./images/backgroundforform.jpg);
+  /* background-color: rgb(243,70,16); */
+  background-color: #000000;
   /* background-size: 300%;
   backface-visibility: visible; */
 
@@ -261,18 +392,20 @@ height: 100vh;
   margin-left: 250px;
 } */
 .formcontainer{
-  background-color: rgb(247, 146, 30);
+  background-color:rgb(243, 90, 25);
   width: 20%;
   margin-left: 15%;
+  border-radius: 5%;
  
 }
 .affichageformcontent{
-  background-color: rgb(247, 146, 30);
+  background-color: rgb(243, 90, 25);
   /* border: red solid; */
   /* border-radius: 15%; */
   margin-right: 15%;
   width: 20%;
   height:auto;
+  border-radius: 5%;
 }
 .type{
   padding-left: 20%;
@@ -285,6 +418,57 @@ height: 100vh;
 
 input{
   text-align: center;
+  color: rgb(243, 90, 25);
+  background-color: #000000;
       }
+::placeholder{
+  color: rgb(243, 90, 25);
+
+}
   /* ////////////////////////////////////////////center label placeholder///////////////////////////////////////////////// */
 
+
+
+.contenumail{
+  height: 15%;
+  width:80%;
+  border: 2px black solid;
+  color: rgb(243, 90, 25) ;
+  border-radius: 5px ;
+  background-color: black;
+  /* margin-left: 15px; */
+  margin-left: 8.5%;
+  /* margin-top: 1%; */
+
+}
+.contenumessage{
+  height: 45%;
+  width:80%;
+  border: 2px black solid;
+  color: rgb(243, 90, 25) ;
+  border-radius: 5px ;
+  background-color: black;
+  /* margin-left: 15px; */
+  margin-left: 8.5%;
+  /* margin-top: 1%; */
+}
+/* .moklo{
+ 
+  position: absolute;
+  height: 25px;
+  width: 205px;
+
+ margin-left: -15px;
+  margin-top: -26px;
+  z-index: 5;
+} */
+.affichageformcontent P{
+  margin-left: 15%;
+}
+
+/* .contenumessage p{
+  /* margin-top: 65%; */
+
+/* .fo p{
+  margin-top: 125%;
+} */
